--- a/django-easyvisa/index_page/templates/index_page/index.html
+++ b/django-easyvisa/index_page/templates/index_page/index.html
@@ -20,26 +20,26 @@
                     <div class="index-page-firstscreen-section-features">
                         <div class="index-page-firstscreen-section-feature index-page-firstscreen-section-features__item"
                              data-aos="fade-up">
-                            <div class="index-page-firstscreen-section-feature__title">6+</div>
+                            <div class="index-page-firstscreen-section-feature__title">{{ first_screen_statistic.stat_1 }}</div>
                             <div class="index-page-firstscreen-section-feature__subtitle">международных <br>представительств
                             </div>
                         </div>
                         <div class="index-page-firstscreen-section-feature index-page-firstscreen-section-features__item"
                              data-aos="fade-up" data-aos-delay="50">
-                            <div class="index-page-firstscreen-section-feature__title">50+</div>
+                            <div class="index-page-firstscreen-section-feature__title">{{ first_screen_statistic.stat_2 }}</div>
                             <div class="index-page-firstscreen-section-feature__subtitle">турагенств <br>доверяет нам
                             </div>
                         </div>
                         <div class="index-page-firstscreen-section-feature index-page-firstscreen-section-features__item"
                              data-aos="fade-up" data-aos-delay="100">
-                            <div class="index-page-firstscreen-section-feature__title">5144</div>
+                            <div class="index-page-firstscreen-section-feature__title">{{ first_screen_statistic.stat_3 }}</div>
                             <div class="index-page-firstscreen-section-feature__subtitle">выданных виз за <br>прошедший
                                 год
                             </div>
                         </div>
                         <div class="index-page-firstscreen-section-feature index-page-firstscreen-section-features__item"
                              data-aos="fade-up" data-aos-delay="150">
-                            <div class="index-page-firstscreen-section-feature__title">98,1%</div>
+                            <div class="index-page-firstscreen-section-feature__title">{{ first_screen_statistic.stat_4 }}</div>
                             <div class="index-page-firstscreen-section-feature__subtitle">одобрения на <br>получение
                                 визы
                             </div>
