sticky second-header

--- a/django-easyvisa/base/templates/base/base.html
+++ b/django-easyvisa/base/templates/base/base.html
@@ -79,7 +79,7 @@
           </div>
         </div>
       </div>
-      <div class="header-second">
+      <div data-js="header-second" class="header-second">
         <div class="header-second__container container">
             <a class="header-second__logo logo" href="{% url 'index_page:home' %}"><img class="logo__img" src="{% static 'img/logo-easyvisa.png' %}"></a>
           <div class="header-second__nav header-second-nav">
